Crates.io badge, typo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ keywords = ["FFI", "espeak", "espeak-ng", "audio", "tts", "speech"]
 categories = ["external-ffi-bindings", "api-bindings"]
 repository = "https://github.com/Better-Player/espeakng-sys"
 homepage = "https://github.com/Better-Player/espeakng-sys"
-readme = "REAMDE.md"
+readme = "README.md"
 
 [build-dependencies]
 bindgen = "0.59.1"
