--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 authors = ["Tobias de Bruijn <t.debruijn@array21.dev>"]
 description = "Raw FFI bindings to eSpeak NG"
 license = "Apache-2.0 OR MIT"
-keywords = ["FFI", "espeak", "espeak-ng", "audio", "tts", "speech"]
+keywords = ["FFI", "espeak-ng", "audio", "tts", "speech"]
 categories = ["external-ffi-bindings", "api-bindings"]
 repository = "https://github.com/Better-Player/espeakng-sys"
 homepage = "https://github.com/Better-Player/espeakng-sys"
