--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,8 @@ homepage = "https://github.com/Better-Player/espeakng-sys"
 readme = "README.md"
 
 [build-dependencies.bindgen]
-version = "0.59.1"
+version = "0.65.1"
 default-features = false
+
+[features]
+static = []
