--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,10 @@ repository = "https://github.com/Better-Player/espeakng-sys"
 homepage = "https://github.com/Better-Player/espeakng-sys"
 readme = "README.md"
 
+[features]
+default = []
+clang-runtime = ["bindgen/runtime"]
+
 [build-dependencies.bindgen]
 version = "0.59.1"
 default-features = false
